Resolve checkbox horizontal jump in formal design

--- a/Survey/styles/formal/base.css
+++ b/Survey/styles/formal/base.css
@@ -2234,7 +2234,7 @@ body > form {
 
 .hiddencontrol {
   position: absolute;
-  left: -9999px;
+  clip: rect(0, 0, 0, 0);
   width: 1px;
   height: 1px;
 }
